--- a/compose/docker-compose.prod.yml
+++ b/compose/docker-compose.prod.yml
@@ -2,7 +2,8 @@ version: "3"
 services:
   rails:
     ports:
-      - 3000:3000
+      - 3001:3001
     command: rails s -b 0.0.0.0
     environment: 
+      PORT: 3001
       RAILS_ENV: production
